packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
.layout-container {
  width: 100%;
  min-width: 100%;
  display: flex;
  flex-direction: column;
  height: 100%;
  max-height: 100%;
}

.top {
  display: block;
  width: 100%;
  flex-shrink: 0;
  overflow-x: auto;
  overflow-y: hidden;
  min-width: 0;
}

.right {
  width: 100%;
  min-width: 0;
  flex-grow: 1;
  overflow: auto;
}

.main {
  width: 100%;
  flex: 1;
  overflow-x: auto;
  overflow-y: hidden;
  display: flex;
  flex-direction: column;
}

.layout-root {
  width: 100%;
  overflow: auto;
  display: block;
}

.layout-row {
  display: flex;
  flex-direction: row;
  flex: 1;
  overflow-x: auto;
  overflow-y: hidden;
  min-height: 0;
}

.constrain {
  max-height: 100%;
  overflow: hidden;
}

